Web : Category : List : Handle case parentCode is empty string
