# docs/web/swagger.json
@@ -296,7 +296,7 @@
                     },
                     {
                         "enum": [
-                            "displayOrder",
+                            "display_order",
                             "code",
                             "name"
                         ],
@@ -314,6 +314,11 @@
                         "name": "orderDirection",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "parentCode",
+                        "in": "query"
                     }
                 ],
                 "responses": {
